--- a/index.html
+++ b/index.html
@@ -15,5 +15,94 @@
     <link rel="stylesheet" href="style.css" />
     <title>weather dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-dark bg-dark">
+      <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
+    </nav>
+    <!-- search for city -->
+    <div class="container">
+      <div class="row">
+        <div class="col-4 bg-dark">
+          <p class="search-header my-1">Search for a City</p>
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button" id="search-button">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
+        <!-- clear history -->
+        <button class="btn btn-primary mb-3" type="button" id="clear-history">
+          Clear History
+        </button>
+        <form id="history"></form>
+      </div>
+      <div class="col-8">
+        <div class="row mr-0">
+          <div class="col-12 border border-dark m-3 rounded">
+            <div class="row">
+              <div class="col-12">
+                <span id="city-name" class="city-name align-middle"></span>
+                <img id="current-pic" src="placeholder" alt="" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p id="temperature"></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p id="humidity"></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p id="wind-speed"></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 d-flex">
+                <p id="UV-index"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <h3>5-Day Forecast</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div
+            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+          ></div>
+          <div
+            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+          ></div>
+          <div
+            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+          ></div>
+          <div
+            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+          ></div>
+          <div
+            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+          ></div>
+        </div>
+      </div>
+    </div>
+    <!-- jQuery and JS bundle w/ Popper.js -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
