--- a/index.html
+++ b/index.html
@@ -10,22 +10,32 @@
     />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <title>weather dashboard</title>
   </head>
   <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
+    <nav class="navbar navbar-light bg-light">
+      <span class="navbar-brand mb-0 h1 w-100 text-center"
+        >Weather Dashboard</span
+      >
     </nav>
     <!-- search for city -->
     <div class="container">
       <div class="row">
-        <div class="col-4 bg-dark">
+        <div class="col-4 bg-light">
           <p class="search-header my-1">Search for a City</p>
-          <div class="input-group-append">
+          <div class="input-group mb-3">
+            <input
+              id="city-input"
+              type="text"
+              class="form-control"
+              placeholder="enter city name"
+              aria-label="enter city name"
+            />
+            <div class="input-group-append"></div>
             <button class="btn btn-primary" type="button" id="search-button">
               <i class="fas fa-search"></i>
             </button>
@@ -39,7 +49,7 @@
       </div>
       <div class="col-8">
         <div class="row mr-0">
-          <div class="col-12 border border-dark m-3 rounded">
+          <div class="col-12 border border-light m-3 rounded">
             <div class="row">
               <div class="col-12">
                 <span id="city-name" class="city-name align-middle"></span>
@@ -75,34 +85,24 @@
         </div>
         <div class="row">
           <div
-            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+            class="col forecast bg-primary text-black ml-3 mb-3 rounded"
           ></div>
           <div
-            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+            class="col forecast bg-primary text-black ml-3 mb-3 rounded"
           ></div>
           <div
-            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+            class="col forecast bg-primary text-black ml-3 mb-3 rounded"
           ></div>
           <div
-            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+            class="col forecast bg-primary text-black ml-3 mb-3 rounded"
           ></div>
           <div
-            class="col forecast bg-primary text-white ml-3 mb-3 rounded"
+            class="col forecast bg-primary text-black ml-3 mb-3 rounded"
           ></div>
         </div>
       </div>
     </div>
-    <!-- jQuery and JS bundle w/ Popper.js -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
